--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  gunicorn: &django
+  gunicorn:
     build:
       context: ./ibridge_backend
       dockerfile: ./Dockerfile
