--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  gunicorn:
+  gunicorn: &django
     build:
       context: ./ibridge_backend
       dockerfile: ./Dockerfile
@@ -38,7 +38,7 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     depends_on:
-      - gunicorn
+      - django
     ports:
       - "80:80"
       - "443:443"
