--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       - MEDIA_PATH=/media
       - STATIC_PATH=/static
       - WORKERS=2
-    ports:
-      - "8000:8000"
+    expose:
+      - 8000
     command: /start-gunicorn
     networks:
       main: {}
