--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile
+    restart: always
     depends_on:
       - gunicorn
     ports:
