--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream ibridge_backend {
-    server gunicorn:8000;
+    server django:8000;
 }
 
 server {
@@ -7,7 +7,7 @@ server {
   server_name 185.121.81.120;
 
   location / {
-        proxy_pass http://ibridge_backend;
+        proxy_pass http://django;
         proxy_redirect off;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
