--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,16 @@
 upstream ibridge_backend {
-    server django:8000;
+    server gunicorn:8000;
 }
 
 server {
-  listen 80;
-  server_name 185.121.81.120;
 
-  location / {
-        proxy_pass http://django;
-        proxy_redirect off;
-        proxy_set_header Host $http_host;
+    listen 80;
+
+    location / {
+        proxy_pass http://ibridge_backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        add_header "Access-Control-Allow-Origin" "*";
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Accept,Content-Type, Origin';
-
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
+
 }
