--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,12 +5,18 @@ upstream ibridge_backend {
 server {
 
     listen 80;
+    server_name 185.121.81.120;
 
     location / {
         proxy_pass http://ibridge_backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Accept,Content-Type';
     }
 
 }
