--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,20 +5,14 @@ upstream ibridge_backend {
 server {
 
     listen 80;
-    server_name ibridge.kz www.ibridge.kz;
+    server_name ibridge.kz www.ibridge.kz 185.121.81.120;
     return 301 https://ibridge$request_uri;
 
-}
+    location / {
+        proxy_pass http://ibridge_backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+    }
 
-server  {
-
-  listen 443 ssl;
-  server_name ibridge.kz;
-
-  location / {
-      proxy_pass http://ibridge_backend;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
-      proxy_redirect off;
-  }
 }
