--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream ibridge_backend {
 server {
 
     listen 80;
-    server_name ibridge.kz www.ibridge.kz 185.121.81.120;
+    server_name 185.121.81.120;
     return 301 https://ibridge$request_uri;
 
     location / {
