--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,23 @@
+upstream ibridge_backend{
+  server gunicorn:8000;
+}
+
 server {
     listen 80;
-    server_name ibridge.kz;
-    server_tokens off;
+    server_name ibridge.kz www.ibridge.kz;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://ibridge$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
     server_name ibridge.kz;
-    server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/ibridge.kz/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ibridge.kz/privkey.pem;
@@ -23,7 +25,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://ibridge.kz;
+        proxy_pass  http://gunicorn;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
