--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,14 +5,7 @@ upstream ibridge_backend{
 server {
     listen 80;
     server_name ibridge.kz www.ibridge.kz;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://ibridge$request_uri;
-    }
+    return 301 https://ibridge$request_uri;
 }
 
 server {
@@ -21,13 +14,12 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/ibridge.kz/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ibridge.kz/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         proxy_pass  http://gunicorn;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
 }
