--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -34,20 +34,26 @@ services:
     command: /start-gunicorn
 
   nginx:
-    image: nginx:1.15-alpine
+    container_name: nginx
+    image: nginx:latest
     restart: unless-stopped
+    networks:
+      nginx_net:
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     ports:
       - 80:80
       - 443:443
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
 
   certbot:
+    container_name: certbot
     image: certbot/certbot
-    restart: unless-stopped
+    restart: unless-stopped #+++
+    networks:
+      nginx_net:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
@@ -69,3 +75,7 @@ volumes:
   local_postgres_data: {}
   local_media_data: {}
   local_static_data: {}
+
+networks:
+  nginx_net:
+    name: nginx_net
