--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -32,6 +32,35 @@ services:
     ports:
       - 8000:8000
     command: /start-gunicorn
+    networks:
+      - app-network
+
+  webserver:
+    image: nginx:mainline-alpine
+    container_name: webserver
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - web-root:/var/www/html
+      - ./nginx-conf:/etc/nginx/conf.d
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+    depends_on:
+      - nodejs
+    networks:
+      - app-network
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    depends_on:
+      - webserver
+    command: certonly --webroot --webroot-path=/var/www/html --email sammy@example.com --agree-tos --no-eff-email --staging -d example.com  -d www.example.com
 
   postgres:
     image: postgres:latest
@@ -46,6 +75,12 @@ services:
       - POSTGRES_PASSWORD=root
 
 volumes:
+  certbot-etc:
+  certbot-var:
   local_postgres_data: {}
   local_media_data: {}
   local_static_data: {}
+
+networks:
+  app-network:
+    driver: bridge
