--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -47,7 +47,7 @@ services:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
     depends_on:
-      - nodejs
+      - gunicorn
     networks:
       - app-network
 
