--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -28,11 +28,35 @@ services:
       - STATIC_PATH=/static
       - WORKERS=3
     expose:
-      - 8000
+      - "8000"
     ports:
-      - 8000:8000
+      - "8000:8000"
     command: /start-gunicorn
-    
+
+  nginx:
+    image: nginx:1.15-alpine
+    restart: unless-stopped
+    volumes:
+      - ./data/nginx/conf_ssl.d:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+      - local_media_data:/media
+      - local_static_data:/static
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - gunicorn
+
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 5d & wait $${!}; done;'"
+
   postgres:
     image: postgres:latest
     restart: always
