--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -63,7 +63,7 @@ services:
     volumes:
       - local_postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_HOST=localhost
+      - POSTGRES_HOST=127.0.0.1
       - POSTGRES_PORT=5432
       - POSTGRES_DB=root
       - POSTGRES_USER=root
