--- a/compose.gunicorn.yml
+++ b/compose.gunicorn.yml
@@ -18,7 +18,7 @@ services:
       - DEBUG=on
       - ALLOWED_HOSTS=*
       - CORS_ALLOWED_ORIGIN_REGEXES=.*
-      - "DATABASE_URL=psql://root:root@localhost:5432/root"
+      - "DATABASE_URL=psql://root:root@postgres:5432/root"
       - API_KEY_SECRET=secret_mako
       - "DJANGO_SECRET_KEY=x3lcsgqrjp@bffoeiw62-9jxo0+_2mj@kvn21h&*vt-@!3f6!2"
       - DJANGO_SUPERUSER_USER=root
@@ -63,7 +63,7 @@ services:
     volumes:
       - local_postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_HOST=localhost
+      - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_DB=root
       - POSTGRES_USER=root
