--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -4,6 +4,7 @@ upstream ibridge_backend {
 
 server {
     listen 80;
+    listen [::]:80;
     server_tokens off;
     server_name *.ibridge.kz ibridge.kz;
 
@@ -23,6 +24,11 @@ server {
     listen 443 ssl;
     server_name *.ibridge.kz ibridge.kz;
     server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/ibridge.kz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ibridge.kz/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
     # serve static files
