--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,28 +34,11 @@ services:
     command: /start-gunicorn
 
   nginx:
-    image: nginx:1.15-alpine
-    restart: unless-stopped
-    volumes:
-      - ./data/nginx/conf_ssl.d:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-      - local_media_data:/media
-      - local_static_data:/static
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    build: ./nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:80"
     depends_on:
       - gunicorn
-
-  certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 5d & wait $${!}; done;'"
 
   postgres:
     image: postgres:latest
