--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,14 +32,35 @@ services:
     ports:
       - "8000:8000"
     command: /start-gunicorn
+    networks:
+      - app-network
 
-  nginx:
-    build: ./nginx
+  webserver:
+    image: nginx:mainline-alpine
+    container_name: webserver
+    restart: unless-stopped
     ports:
-      - "443:443"
       - "80:80"
+    volumes:
+      - web-root:/var/www/html
+      - ./nginx-conf:/etc/nginx/conf.d
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
     depends_on:
       - gunicorn
+    networks:
+      - app-network
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    depends_on:
+      - webserver
+    command: certonly --webroot --webroot-path=/var/www/html --email sammy@example.com --agree-tos --no-eff-email --staging -d example.com  -d www.example.com
 
   postgres:
     image: postgres:latest
@@ -57,3 +78,15 @@ volumes:
   local_postgres_data: {}
   local_media_data: {}
   local_static_data: {}
+  certbot-etc:
+  certbot-var:
+  web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/sammy/node_project/views/
+      o: bind
+
+networks:
+  app-network:
+    driver: bridge
