--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - certbot-var:/var/lib/letsencrypt
     depends_on:
       - webserver
-    command: certonly --webroot --webroot-path=/var/www/html --email sammy@example.com --agree-tos --no-eff-email --staging -d example.com  -d www.example.com
+    command: certonly --webroot --webroot-path=/var/www/html --email tengri.07@mail.ru --agree-tos --no-eff-email --staging -d ibridge.kz  -d www.ibridge.kz
 
   postgres:
     image: postgres:latest
