--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     ports:
       - "80:80"
     volumes:
+      - web-root:/var/www/html
       - ./nginx-conf:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
@@ -56,6 +57,7 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
     depends_on:
       - webserver
     command: certonly --webroot --webroot-path=/var/www/html --email tengri.07@mail.ru --agree-tos --no-eff-email --staging -d ibridge.kz  -d www.ibridge.kz
@@ -78,6 +80,12 @@ volumes:
   local_static_data: {}
   certbot-etc:
   certbot-var:
+  web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: /ibridge/
+      o: bind
 
 networks:
   app-network:
