--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /ibridge/
+      device: /home/sammy/node_project/views/
       o: bind
 
 networks:
