--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -1,12 +1,18 @@
 server {
-    listen 80;
-    listen [::]:80;
-    server_name ibridge.kz www.ibridge.kz;
-    return 301 https://$server_name$request_uri;
+        listen 80;
+        listen [::]:80;
 
-    location ~ /.well-known/acme-challenge {
+        root /var/www/html;
+        index index.html index.htm index.nginx-debian.html;
+
+        server_name ibridge.kz www.ibridge.kz;
+
+        location / {
+                proxy_pass http://gunicorn:8000;
+        }
+
+        location ~ /.well-known/acme-challenge {
                 allow all;
                 root /var/www/html;
         }
-
 }
